{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 9,
  "lineage": "e3a76e91-d78a-e6fc-a68c-f78bd1ad28ec",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "module.compute.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:058264418718:instance/i-0780b96dc252f9514",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0780b96dc252f9514",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app_server",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbbcccc8c81cc3df",
            "private_dns": "ip-10-0-1-238.ec2.internal",
            "private_ip": "10.0.1.238",
            "public_dns": "ec2-54-159-250-73.compute-1.amazonaws.com",
            "public_ip": "54.159.250.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09735b3bfb77012a4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-040624e9df801c321",
            "tags": {
              "Name": "app_server"
            },
            "tags_all": {
              "Name": "app_server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a8f20301272057e2"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ami"
              }
            ]
          ],
          "dependencies": [
            "module.compute.aws_key_pair.aws-key",
            "module.compute.data.aws_ssm_parameter.webserver-ami",
            "module.vpc.aws_security_group.ansible_public_sg",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418718:internet-gateway/igw-033827249b2d5b3f4",
            "id": "igw-033827249b2d5b3f4",
            "owner_id": "058264418718",
            "tags": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Gateway"
            },
            "vpc_id": "vpc-0f505dff6f3a474ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_public_route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418718:route-table/rtb-083c3a40176c3a125",
            "id": "rtb-083c3a40176c3a125",
            "owner_id": "058264418718",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033827249b2d5b3f4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-RouteTable"
            },
            "vpc_id": "vpc-0f505dff6f3a474ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_public_assoc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd3042aef4f2590e",
            "route_table_id": "rtb-083c3a40176c3a125",
            "subnet_id": "subnet-040624e9df801c321"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.ansible_igw",
            "module.vpc.aws_route_table.ansible_public_route",
            "module.vpc.aws_subnet.ansible_public_subnet",
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_public_sg",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418718:security-group/sg-0a8f20301272057e2",
            "description": "Used for access to the public instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8f20301272057e2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/1233",
                "from_port": 1233,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1233
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/5000",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow traffic from TCP/80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ansible_public_sg",
            "name_prefix": "",
            "owner_id": "058264418718",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Ansible-SecurityGroup"
            },
            "tags_all": {
              "Name": "Ansible-SecurityGroup"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f505dff6f3a474ab"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_public_subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418718:subnet/subnet-040624e9df801c321",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-040624e9df801c321",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264418718",
            "tags": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "tags_all": {
              "Name": "Ansible-Sandbox-Subnet"
            },
            "vpc_id": "vpc-0f505dff6f3a474ab"
          },
          "dependencies": [
            "module.vpc.aws_vpc.ansible_vpc",
            "module.vpc.data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264418718:vpc/vpc-0f505dff6f3a474ab",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0520403720262807c",
            "default_route_table_id": "rtb-08eab1219942dd735",
            "default_security_group_id": "sg-0f7439bc7adfaeee0",
            "dhcp_options_id": "dopt-01dbd9bbd9bb7f443",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0f505dff6f3a474ab",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-08eab1219942dd735",
            "owner_id": "058264418718",
            "tags": {
              "Name": "Terraform-VPC"
            },
            "tags_all": {
              "Name": "Terraform-VPC"
            }
          }
        }
      ]
    }
  ]
}